--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav class="navbar">
             <div class="nav-container">
                 <div class="nav-logo">
-                    <img src="img/coderise.png" alt="logo">
+                    <img src="coderise.png" alt="logo">
                 </div>
                 <ul class="nav-menu">
                     <li class="nav-item">
