--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                         </div>
                     </div>
                     <div class="sobre-imagem">
-                        <img src="img/minha-foto.png" alt="Meu Perfil">
+                        <img src="minha-foto.png" alt="Meu Perfil">
                     </div>
                 </div>
             </div>
@@ -106,13 +106,13 @@
                         <div class="carousel-container">
                             
                             <div class="carousel-slide active">
-                                <img src="img/serieouro/serieouro1.png" alt="Série Ouro 1">
+                                <img src="serieouro1.png" alt="Série Ouro 1">
                             </div>
                             <div class="carousel-slide">
-                                <img src="img/serieouro/serieouro2.png" alt="Série Ouro 2">
+                                <img src="serieouro2.png" alt="Série Ouro 2">
                             </div>
                             <div class="carousel-slide">
-                                <img src="img/serieouro/serieouro3.png" alt="Série Ouro 3">
+                                <img src="serieouro3.png" alt="Série Ouro 3">
                             </div>
                             <div class="carousel-dots">
                                 <span class="dot active" onclick="currentSlide(1)"></span>
@@ -128,7 +128,7 @@
                     <!-- Projeto 2: Site Institucional -->
                     <div class="projeto-card">
                         <div class="projeto-imagem">
-                            <img src="img/iledi.png" alt="Site Institucional" onerror="this.src='img/logo-cinza.png'">
+                            <img src="iledi.png" alt="Site Institucional" onerror="this.src='img/logo-cinza.png'">
                         </div>
                         <h3>Site Institucional</h3>
                         <p>Desenvolvimento de site corporativo com foco em experiência do usuário e responsividade.</p>
@@ -138,7 +138,7 @@
                     <!-- Projeto 3: Novo Projeto -->
                     <div class="projeto-card">
                         <div class="projeto-imagem">
-                            <img src="img/moda-viva.png" alt="Novo Projeto">
+                            <img src="moda-viva.png" alt="Novo Projeto">
                         </div>
                         <h3>MODA VIVA</h3>
                         <p>E-commerce moderno para loja de moda com design elegante, carrinho de compras integrado e sistema de pagamento. Desenvolvido com foco na experiência do usuário e responsividade mobile.</p>
@@ -148,7 +148,7 @@
                     <!-- Projeto 4: Outro Projeto -->
                     <div class="projeto-card">
                         <div class="projeto-imagem">
-                            <img src="img/projeto-adv.png" alt="Outro Projeto">
+                            <img src="projeto-adv.png" alt="Outro Projeto">
                         </div>
                         <h3>Advocacia Silva</h3>
                         <p>Landing page profissional para escritório de advocacia com design clean e institucional. Inclui formulário de contato, seção de serviços jurídicos e informações sobre a equipe de advogados.</p>
